Old local file and S3 backups created using date-based filenames can now be automatically deleted if older than a selected number of days, configurable on the Scheduled Backups page.
---- Changes since 3.58 ----
The PHP modules and Pear modules available for each domain are now displayed on the Website Options page.
Plesk 7 backups can now be migrated as Virtualmin domains, using a new backup file type on the migration page.
Updated the Piwik script installer to version 0.2.3, Magento to 1.0.19870.4, PHPCoin to 1.4.3, Gallery to 2.2.5, Horde to 3.2.1, Turba to 2.2.1, Mantis to 1.1.2, SugarCRM to 5.0.0f, Movable Type to 4.12, OpenX to 2.4.7, phpScheduleIt to 1.2.9, phpMyAdmin to 2.11.7, and Trac to version 0.11rc2.
Added a script installer for Zikula, a new content management system written in PHP.
Allow the default shell to be set on a per-template basis.
Added a complete Spanish translation, contributed by Ignacio.
The bandwidth usage graphs can be restricted to showing just servers that are over their limits, using a new mode link.
Move some rarely-used options to the Advanced section of the Module Config page.
Additional manually configured nameservers can now be more easily entered in server templates, in the BIND DNS domain section.
Converted all command-line API scripts to use POD format documentation.
Added the Virtualmin API helper command /usr/sbin/virtualmin, which lets you more easily call API scripts with a command like "virtualmin list-domains --multiline". Help on commands can also be displayed with like "virtualmin help list-domains".
Purging of old backups made to FTP or SSH servers is now supported, for FTP servers that use Unix directory listings and SSH servers that allow commands to be run.
---- Changes since 3.58 ----
Updated the Piwik script installer to version 0.2.4.