@@ -1,0 +1,17 @@
+<header>Command to get memory usage</header>
+
+By default, Virtualmin will get total and free memory from the appropriate
+commands for your operating system. However, if these are not accurate or
+do not reflect the usage you want users to see (such as in a VPS environment),
+this field can be set to a command that must output the following values, one
+per line :<p>
+
+<ol>
+<li>Total real memory in bytes
+<li>Free real memory in bytes
+<li>Total swap space in bytes, or 0 if none
+<li>Free swap space in bytes
+</ol>
+
+<footer>
+
