@@ -948,3 +948,4 @@ Added the Virtualmin API helper command /usr/sbin/virtualmin, which lets you mor
 Purging of old backups made to FTP or SSH servers is now supported, for FTP servers that use Unix directory listings and SSH servers that allow commands to be run.
 ---- Changes since 3.58 ----
 Updated the Piwik script installer to version 0.2.4.
+Added a Module Config field for a custom command to get memory and swap information.
